Differentiate between SolydX and SolydK packages

--- a/html/en/home.html
+++ b/html/en/home.html
@@ -40,27 +40,36 @@
 				<tr>
 					<td class="app_homepage">Homepage: <a href="https://inkscape.org" target="_blank">https://inkscape.org</a></td>
 				</tr>
-				<tr><td colspan=2 class="app_title">Shotwell</td></tr>
+				<tr><td colspan=2 class="app_title">Shotwell / Digikam</td></tr>
 				<tr>
 					<td>
-						Shotwell is an image organizer designed to provide personal photo management.<br><br>
-						Shotwell can import photos and videos from a digital camera directly. Shotwell automatically groups photos and videos by date, and supports tagging. Its image editing features allow users to straighten, crop, eliminate red eye, and adjust levels and color balance.							
+						<p>Shotwell is an image organizer designed to provide personal photo management.<br>
+						Shotwell can import photos and videos from a digital camera directly. Shotwell automatically groups photos and videos by date, 
+						and supports tagging. Its image editing features allow users to straighten, crop, eliminate red eye, and adjust levels and color balance.</p>
+						<p>For SolydK Digikam is installed. It has the same functionality as Shotwell</p>							
 					</td>
 					<td rowspan=2><img src="../link/screenshots/shotwell.jpg" /></td>
 				</tr>
 				<tr>
-					<td class="app_homepage">Homepage: <a href="https://wiki.gnome.org/Apps/Shotwell/" target="_blank">https://wiki.gnome.org/Apps/Shotwell</a></td>
+					<td class="app_homepage">
+						Homepage Shotwell: <a href="https://wiki.gnome.org/Apps/Shotwell/" target="_blank">https://wiki.gnome.org/Apps/Shotwell</a><br>
+						Homepage Digikamm: <a href="https://www.digikam.org/" target="_blank">https://www.digikam.org</a>
+					</td>
 				</tr>
-				<tr><td colspan=2 class="app_title">Clementine</td></tr>
+				<tr><td colspan=2 class="app_title">Clementine / Amarok</td></tr>
 				<tr>
 					<td>
-						Clementine is a modern music player and library organizer.<br><br>
-						Clementine is a multiplatform music player. It is inspired by Amarok 1.4, focusing on a fast and easy-to-use interface for searching and playing your music. 
+						<p>Clementine is a modern music player and library organizer.<br>
+						Clementine is a multiplatform music player. It is inspired by Amarok 1.4, focusing on a fast and easy-to-use interface for searching and playing your music.</p>
+						<p>For SolydK Amarok is installed. It has the same functionality as Clementine</p>
 					</td>
 					<td rowspan=2><img src="../link/screenshots/clementine.jpg" /></td>
 				</tr>
 				<tr>
-					<td class="app_homepage">Homepage: <a href="https://www.clementine-player.org" target="_blank">https://www.clementine-player.org</a></td>
+					<td class="app_homepage">
+						Homepage Clementine: <a href="https://www.clementine-player.org" target="_blank">https://www.clementine-player.org</a><br>
+						Homepage Amarok: <a href="https://amarok.kde.org" target="_blank">https://amarok.kde.org</a>
+					</td>
 				</tr>
 				<tr><td colspan=2 class="app_title">HandBrake</td></tr>
 				<tr>
@@ -84,25 +93,33 @@
 				<tr>
 					<td class="app_homepage">Homepage: <a href="http://soundconverter.org" target="_blank">http://soundconverter.org</a></td>
 				</tr>
-				<tr><td colspan=2 class="app_title">Pitivi</td></tr>
+				<tr><td colspan=2 class="app_title">Pitivi / Kdenlive</td></tr>
 				<tr>
 					<td>
-						Pitivi is a Free video editor with a beautiful and intuitive user interface, a clean codebase and a fantastic community.
+						<p>Pitivi is a Free video editor with a beautiful and intuitive user interface, a clean codebase and a fantastic community.</p>
+						<p>For SolydK Kdenlive is installed. It has the same functionality as Pitivi</p>
 					</td>
 					<td rowspan=2><img src="../link/screenshots/pitivi.jpg" /></td>
 				</tr>
 				<tr>
-					<td class="app_homepage">Homepage: <a href="http://www.pitivi.org" target="_blank">http://www.pitivi.org</a></td>
+					<td class="app_homepage">
+						Homepage Pitivi: <a href="http://www.pitivi.org" target="_blank">http://www.pitivi.org</a><br>
+						Homepage Kdenlive: <a href="https://kdenlive.org/" target="_blank">https://kdenlive.org</a>
+					</td>
 				</tr>
-				<tr><td colspan=2 class="app_title">Transmission</td></tr>
+				<tr><td colspan=2 class="app_title">Transmission / Ktorrent</td></tr>
 				<tr>
 					<td>
-						Transmission is a BitTorrent client which features a simple interface on top of a cross-platform back-end.
+						<p>Transmission is a BitTorrent client which features a simple interface on top of a cross-platform back-end.</p>
+						<p>For SolydK Ktorrent is installed. It has the same functionality as Transmission</p>
 					</td>
 					<td rowspan=2><img src="../link/screenshots/transmission.jpg" /></td>
 				</tr>
 				<tr>
-					<td class="app_homepage">Homepage: <a href="https://www.transmissionbt.com/" target="_blank">https://www.transmissionbt.com</a></td>
+					<td class="app_homepage">
+						Homepage Transmission: <a href="https://www.transmissionbt.com/" target="_blank">https://www.transmissionbt.com</a><br>
+						Homepage Ktorrent: <a href="http://www.ktorrent.org/" target="_blank">http://www.ktorrent.org</a>
+					</td>
 				</tr>
 				<tr><td colspan=2>&nbsp;</td></tr>
 			</table>
