--- a/po/en/system.html
+++ b/po/en/system.html
@@ -20,10 +20,9 @@
 				<tr><td colspan=2 class="app_title">Gparted</td></tr>
 				<tr>
 					<td>
-						GParted is a free partition editor for graphically managing your disk partitions. 
-						With GParted you can resize, copy, and move partitions without data loss.
+						<p>GParted is a free partition editor for graphically managing your disk partitions. With GParted you can resize, copy, and move partitions without data loss.</p>
 					</td>
-					<td rowspan=2><img src="../link/screenshots/gparted.jpg" /></td>
+					<td rowspan=2><img class="screenshot" src="../link/screenshots/gparted.jpg" /></td>
 				</tr>
 				<tr>
 					<td class="app_homepage">Homepage: <a href="http://gparted.sourceforge.net/" target="_blank">http://gparted.sourceforge.net</a></td>
@@ -31,11 +30,9 @@
 				<tr><td colspan=2 class="app_title">VirtualBox</td></tr>
 				<tr>
 					<td>
-						VirtualBox is a general-purpose full virtualizer for x86 hardware, targeted at server, desktop and embedded use. 
-						The VirtualBox package installs on an existing host operating system as an application; 
-						this host application allows additional guest operating systems, each known as a Guest OS, to load and run, each with its own virtual environment.
+						<p>VirtualBox is a general-purpose full virtualizer for x86 hardware, targeted at server, desktop and embedded use. The VirtualBox package installs on an existing host operating system as an application; this host application allows additional guest operating systems, each known as a Guest OS, to load and run, each with its own virtual environment.</p>
 					</td>
-					<td rowspan=2><img src="../link/screenshots/virtualbox.jpg" /></td>
+					<td rowspan=2><img class="screenshot" src="../link/screenshots/virtualbox.jpg" /></td>
 				</tr>
 				<tr>
 					<td class="app_homepage">Homepage: <a href="https://www.virtualbox.org/" target="_blank">https://www.virtualbox.org</a></td>
@@ -43,9 +40,9 @@
 				<tr><td colspan=2 class="app_title">FileZilla</td></tr>
 				<tr>
 					<td>
-						FileZilla Client is a fast and reliable cross-platform FTP, FTPS and SFTP client with lots of useful features and an intuitive graphical user interface.
+						<p>FileZilla Client is a fast and reliable cross-platform FTP, FTPS and SFTP client with lots of useful features and an intuitive graphical user interface.</p>
 					</td>
-					<td rowspan=2><img src="../link/screenshots/filezilla.jpg" /></td>
+					<td rowspan=2><img class="screenshot" src="../link/screenshots/filezilla.jpg" /></td>
 				</tr>
 				<tr>
 					<td class="app_homepage">Homepage: <a href="https://filezilla-project.org/" target="_blank">https://filezilla-project.org</a></td>
