Added nl and ca translations

--- a/po/translated/nl/business.html
+++ b/po/translated/nl/business.html
@@ -16,21 +16,22 @@
 			<table>
 				<tr>
 					<td colspan="2">
-						<p>Dit is een lijst van aanbevolen applicaties geschikt zijn voor bedrijven.</p>
-						<p>Wanneer u op de installatieknop klikt, worden alle onderstaande spellen
-geïnstalleerd. U kunt de software manager gebruiken om ze afzonderlijk te
+						<p>Dit is een lijst van aanbevolen applicaties die geschikt zijn voor
+bedrijven.</p>
+						<p>Wanneer u op de installatieknop klikt, worden alle onderstaande applicaties
+geïnstalleerd. U kunt de softwaremanager gebruiken om ze afzonderlijk te
 installeren.</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Gnucash</td></tr>
 				<tr>
 					<td>
-						<p>GnuCash is persoonlijk en klein-zakelijke financieel-boekhoudkundige
+						<p>GnuCash is persoonlijke en klein-zakelijke financieel-boekhoudkundige
 software.</p>
-						<p>GnuCash is ontworpen om gemakkelijk, maar ook krachtig en flexibel te zijn,
-u kunt uw bankrekeningen, aandelen, inkomsten en uitgaven bijhouden. Het is
-gebaseerd op professionele boekhoudkundige principes om gebalanceerde boeken
-en accurate rapporten te verzekeren.</p>
+						<p>GnuCash is ontworpen om gemakkelijk, maar ook krachtig en flexibel te
+zijn. U kunt uw bankrekeningen, aandelen, inkomsten en uitgaven
+bijhouden. Het is gebaseerd op professionele boekhoudkundige principes om
+gebalanceerde boeken en accurate rapporten te verzekeren.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="gnucash" src="../link/screenshots/gnucash.jpg" /></td>
 				</tr>
@@ -41,9 +42,9 @@ target="_blank">http://www.gnucash.org</a></td>
 				<tr><td colspan="2" class="app_title">Dolibarr</td></tr>
 				<tr>
 					<td>
-						<p>Dolibarr ERP en CRM is een modern en eenvoudig te gebruiken web-software om
-uw bedrijf (contacten, facturen, orders, producten, voorraden, agenda,
-e-mailings, enz ...) te beheren.</p>
+						<p>Dolibarr ERP en CRM is een moderne en eenvoudig te gebruiken websoftware om
+uw bedrijf te beheren (contacten, facturen, orders, producten, voorraden,
+agenda, e-mailings, enz ...).</p>
 						<p>Tijdens de eerste start, wordt de definitieve configuratie gestart. U dient
 de volgende informatie in te vullen:</p>
 						 <ul>
@@ -51,7 +52,7 @@ de volgende informatie in te vullen:</p>
 							 <li>Superuser toegang: root / your_root_password</li>
 							 <li>Dolibarr admin login : admin / admin</li>
 						 </ul>
-						<p>Vervang "your_root_password" met uw root wachtwoord.</p>
+						<p>Vervang "your_root_password" door uw root wachtwoord.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="dolibarr" src="../link/screenshots/dolibarr.jpg" /></td>
 				</tr>
@@ -64,7 +65,7 @@ target="_blank">http://www.dolibarr.org</a></td>
 					<td>
 						<p>LetoDMS is een open-source webapplicatie. Het is een document management
 systeem (DMS) geschreven in PHP met een database backend. LetoDMS biedt
-document meta-data, versie controle, veiligheid en eenvoudige toegang tot uw
+document meta-data, versiecontrole, veiligheid en makkelijke toegang tot uw
 documenten.</p>
 						<p>Login met: admin / admin</p>
 						<p>U kunt de Dolibarr en Letodms databases onderhouden met phpMyAdmin (Login:
