--- a/po/translated/nl/home.html
+++ b/po/translated/nl/home.html
@@ -15,19 +15,19 @@
 			<table>
 				<tr>
 					<td colspan="2">
-						<p>Dit is een lijst van aanbevolen applicaties geschikt zijn voor
+						<p>Dit is een lijst van aanbevolen applicaties die geschikt zijn voor
 thuisgebruikers.</p>
-						<p>Wanneer u op de installatieknop klikt, worden alle onderstaande spellen
-geïnstalleerd. U kunt de software manager gebruiken om ze afzonderlijk te
+						<p>Wanneer u op de installatieknop klikt, worden alle onderstaande applicaties
+geïnstalleerd. U kunt de softwaremanager gebruiken om ze afzonderlijk te
 installeren.</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Gimp</td></tr>
 				<tr>
 					<td>
-						<p>GIMP is een acroniem voor GNU Image Manipulation Program. GIMP is een
+						<p>GIMP is een acroniem voor GNU Image Manipulation Program. Het is een
 grafisch programma voor het bewerken van foto's en andere digitale
-beeldbewerking op de computer.</p>
+beeldbewerking.</p>
 						<p>Het heeft vele mogelijkheden. Het kan gebruikt worden als een simpel
 tekenprogramma, fotoretouchesoftware, een online batch processing systeem,
 een massa-beeldproductie renderer en veel meer.</p>
@@ -42,8 +42,8 @@ target="_blank">http://www.gimp.org</a></td>
 				<tr>
 					<td>
 						<p>Inkscape is een open-source vector graphics editor vergelijkbaar met Adobe
-Illustrator, Corel Draw, Freehand, of Xara X. Inkscape onderscheidt zich
-door het gebruik van Scalable Vector Graphics (SVG), een open XML-gebaseerde
+Illustrator, Corel Draw, Freehand of Xara X. Inkscape onderscheidt zich door
+het gebruik van Scalable Vector Graphics (SVG), een open XML-gebaseerde
 W3C-standaard.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="inkscape" src="../link/screenshots/inkscape.jpg" /></td>
@@ -57,9 +57,9 @@ target="_blank">https://inkscape.org</a></td>
 					<td>
 						<p>Shotwell is een programma om uw foto's te beheren.</p>
 						<p>Shotwell kan foto's en video's van een digitale camera importeren. Shotwell
-groepeert automatisch foto's en video's op datum, en ondersteunt tagging. De
-beeldbewerking functies stellen gebruikers in staat om foto's recht te
-zetten, bij te snijden, rode ogen te verwijderen, en het niveau en de
+groepeert automatisch foto's en video's op datum en ondersteunt tagging. De
+beeldbewerkingsfuncties stellen gebruikers in staat om foto's recht te
+zetten, bij te snijden, rode ogen te verwijderen en het niveau en de
 kleurbalans aan te passen.</p>
 						<p>Voor SolydK wordt Digikam geïnstalleerd. Het heeft dezelfde functionaliteit
 als Shotwell.</p>							
@@ -78,9 +78,9 @@ target="_blank">https://www.digikam.org</a></p>
 				<tr>
 					<td>
 						<p>Clementine is een muziekspeler en organiseert uw muziekverzameling.</p>
-						<p>Clementine is een vrije muziekspeler geïnspireerd op Amarok 1.4, gericht op
-een snelle en makkelijk te gebruiken interface voor het zoeken en afspelen
-van uw muziek.</p>
+						<p>Clementine is een vrije muziekspeler geïnspireerd door Amarok 1.4, gericht
+op een snelle en makkelijk te gebruiken interface voor het zoeken en
+afspelen van uw muziek.</p>
 						<p>Voor SolydK wordt Amarok geïnstalleerd. Het heeft dezelfde functionaliteit
 als Clementine.</p>
 					</td>
@@ -110,8 +110,8 @@ target="_blank">https://handbrake.fr</a></td>
 					<td>
 						<p>SoundConverter converteert audiobestanden. Het leest alles wat GStreamer kan
 lezen (Ogg Vorbis, AAC, MP3, FLAC, WAV, AVI, MPEG, MOV, M4A, AC3, DTS, ALAC,
-MPC, verkorten, APE, SID, MOD, XM, S3M, etc ... ), en schrijft naar Opus,
-Ogg Vorbis, FLAC, WAV, AAC en MP3 bestanden.</p>
+MPC, Shorten, APE, SID, MOD, XM, S3M, enz... ) en schrijft naar Opus, Ogg
+Vorbis, FLAC, WAV, AAC en MP3 bestanden.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="soundconverter" src="../link/screenshots/soundconverter.jpg" /></td>
 				</tr>
