--- a/po/translated/nl/legal.html
+++ b/po/translated/nl/legal.html
@@ -13,7 +13,7 @@
 			<div class="warning">
 				<p>Wettelijke waarschuwing:</p>
 				<p>Controleer uw lokale wetten om er zeker van te zijn dat het gebruik van
-libdvdcss2 legaal is.</p>
+libdvdcss2 voor u legaal is.</p>
 			</div>
 			<p>De meeste commerciële dvd's zijn gecodeerd met CSS (Content Scramble
 System), dat probeert de software die een DVD kan spelen te beperken.</p>
