--- a/po/translated/nl/system.html
+++ b/po/translated/nl/system.html
@@ -14,17 +14,18 @@
 			<table>
 				<tr>
 					<td colspan=2>
-						<p>Wanneer u op de installatieknop klikt, worden alle onderstaande spellen
-geïnstalleerd. U kunt de software manager gebruiken om ze afzonderlijk te
+						<p>Wanneer u op de installatieknop klikt, worden alle onderstaande applicaties
+geïnstalleerd. U kunt de softwaremanager gebruiken om ze afzonderlijk te
 installeren.</p>
 					</td>
 				</tr>
 				<tr><td colspan=2 class="app_title">Gparted</td></tr>
 				<tr>
 					<td>
-						<p>GParted is een programma om partities op de harde schijf te creëren,
-verwijderen, formatteren, verplaatsen, verkleinen en vergroten, controleren
-en kopiëren, met als doel het reorganiseren van een harde schijf.</p>
+						<p>GParted is een gratis partitiebewerker om via een grafische interface uw
+schijfpartities te beheren. U kunt partities maken, formatteren, controleren
+en verwijderen en bovendien verkleinen en vergroten, kopiëren of verplaatsen
+zonder verlies van gegevens.</p>
 					</td>
 					<td rowspan=2><img class="screenshot" src="../link/screenshots/gparted.jpg" /></td>
 				</tr>
@@ -35,9 +36,8 @@ target="_blank">http://gparted.sourceforge.net</a></td>
 				<tr><td colspan=2 class="app_title">VirtualBox</td></tr>
 				<tr>
 					<td>
-						<p>VirtualBox is een vrij computerprogramma om besturingssystemen te draaien
-binnen een (ander) besturingssysteem. Dit gebeurt op basis van
-virtualisatie.</p>
+						<p>VirtualBox is een virtualisatieprogramma voor x86 hardware om
+besturingssystemen te draaien binnen een ander besturingssysteem.</p>
 					</td>
 					<td rowspan=2><img class="screenshot" src="../link/screenshots/virtualbox.jpg" /></td>
 				</tr>
