--- a/po/translated/nl/welcome.html
+++ b/po/translated/nl/welcome.html
@@ -12,13 +12,13 @@
 	<div class="main">
 		<div class="content">
 			<p>SolydXK is een open source besturingssysteem voor bedrijven, organisaties en
-thuisgebruikers. Zowel SolydX en SolydK zijn gebaseerd op Debian Stable om
+thuisgebruikers. Zowel SolydX als SolydK zijn gebaseerd op Debian Stable om
 de grootste stabiliteit en veiligheid te waarborgen.</p>
 			<p>
 				<table>
 					<tr>
 						<td><p>SolydXK is geheel gratis te gebruiken. Uw donatie wordt echter zeer
-gewaardeerd, en zorgt ervoor dat we SolydXK kunnen blijven verbeteren.</p></td>
+gewaardeerd en zorgt ervoor dat we SolydXK kunnen blijven verbeteren.</p></td>
 						<td><a href="http://solydxk.com/contribute/donate/" target="_blank"><img alt="donate" src="../link/donate.gif" /></a></td>
 					</tr>
 				</table>
@@ -30,7 +30,7 @@ thuisgebruikers gemaakt. Deze kunt u in de volgende pagina's installeren.</p>
 				<tr><td colspan="2" class="app_title">Software</td></tr>
 				<tr>
 					<td><p>	Alle software is gebouwd, onderhouden en gecontroleerd door de
-gemeenschap. Software databases genaamd "repositories" worden gebruikt om
+gemeenschap. Softwaredatabases genaamd "repositories" worden gebruikt om
 meer dan 60.000 softwarepakketten aan te bieden en te onderhouden. Er is dus
 geen noodzaak om software te downloaden van dubieuze websites. U hoeft
 alleen de software die u nodig hebt met de Software Manager te zoeken en te
@@ -45,7 +45,7 @@ installeren.</p></td>
 					<td><p>Als u nieuw bent bij SolydXK of wanneer u niet meer verder komt, is er de
 SolydXK gemeenschap om u te helpen uw probleem op te lossen. U kunt zoeken
 op het forum om uit te vinden of het probleem al is opgelost of u start een
-nieuw onderwerp om hulp te krijgen.</p></td>
+nieuw topic om hulp te krijgen.</p></td>
 					<td rowspan="2"><img class="screenshot" alt="forum" src="../link/screenshots/forum.jpg" /></td>
 				</tr>
 				<tr>
