--- a/po/en/drivers.html
+++ b/po/en/drivers.html
@@ -13,7 +13,7 @@
 		<div class="content">
 			<p>SolydXK comes with a wide variety of drivers pre-installed. For most purposes these drivers suffice but in some cases better performance is provided by the proprietary drivers of the manufacturer.</p>
 			<p>The install button will open the Device Driver Manager (DDM). This is a tool to help you installing these hardware drivers. It will check your hardware and list any available proprietary drivers you can install. You only need to select the recommended driver for your hardware and DDM will do the rest.</p>
-			<p>Currently <strong>Nvidia</strong>, <strong>ATI</strong> and <strong>Broadcom</strong> drivers can be installed and allows to install the <strong>PAE</strong> kernel for multi-core 32-bit systems.</p>
+			<p>Currently <strong>Nvidia</strong>, <strong>ATI</strong> and <strong>Broadcom</strong> drivers can be installed. DDM also allows to install the <strong>PAE</strong> kernel for multi-core 32-bit systems.</p>
 		</div>
 	</div>
   </body>
