--- a/po/translated/nl/drivers.html
+++ b/po/translated/nl/drivers.html
@@ -11,17 +11,16 @@
 
 	<div class="main">
 		<div class="content">
-			<p>SolydXK wordt geleverd met een breed scala van vooraf geïnstalleerde
-stuurprogramma's. Voor de meeste doeleinden volstaan deze drivers, maar in
-sommige gevallen worden betere prestaties geleverd door de gesloten software
-van de fabrikant.</p>
-			<p>De installatieknop zal de Device Driver Manager (DDM) openen. Dit is een
+			<p>SolydXK wordt geleverd met een breed scala aan vooraf geïnstalleerde
+stuurprogramma's. Deze voldoen meestal, maar in sommige gevallen levert de
+gesloten software van de fabrikant betere prestaties.</p>
+			<p>De installatieknop opent de Device Driver Manager (DDM). Dit is een
 hulpmiddel om u te helpen bij het installeren van deze hardware drivers. Het
-zal je hardware controleren en een lijst van alle beschikbare drivers van de
+zal uw hardware controleren en een lijst van alle beschikbare drivers van de
 fabrikant tonen. U hoeft alleen de aanbevolen driver voor uw hardware te
 selecteren en DDM zal de rest doen.</p>
 			<p>Momenteel kunnen <strong>Nvidia</strong>, <strong>ATI</strong> en
-<strong>Broadcom</strong> worden geïnstalleerd en maakt het mogelijk om de
+<strong>Broadcom</strong> worden geïnstalleerd. Het is ook mogelijk om de
 <strong>PAE</strong> kernel te installeren voor multi-core 32 bit systemen.</p>
 		</div>
 	</div>
