--- a/po/translated/nl/games.html
+++ b/po/translated/nl/games.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<title>Games</title>
+	<title>Spellen</title>
     <meta charset="utf-8" />
     <link href="../link/general.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="background"></div>
     
-	<h1 class="title">Games</h1>
+	<h1 class="title">Spellen</h1>
 
 	<div class="main">
 		<div class="content">
@@ -17,15 +17,15 @@
 					<td colspan="2">
 						<p>Na een dag noeste arbeid is het tijd voor ontspanning...</p>
 						<p>Wanneer u op de installatieknop klikt, worden alle onderstaande spellen
-geïnstalleerd. U kunt de software manager gebruiken om ze afzonderlijk te
+geïnstalleerd. U kunt de softwaremanager gebruiken om ze afzonderlijk te
 installeren.</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Steam</td></tr>
 				<tr>
 					<td>
-						<p>Steam is een internet-baseerde digitale distributie, beheer van digitale
-rechten (DRM), multiplayer en sociaal netwerk platform ontwikkeld door de
+						<p>Steam is een internet-gebaseerd, digitaal gedistribueerd, digitale rechten
+(DRM) bewust, multiplayer en sociaal netwerk platform, ontwikkeld door de
 Valve Corporation.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="steam" src="../link/screenshots/steam.jpg" /></td>
@@ -34,7 +34,7 @@ Valve Corporation.</p>
 					<td class="app_homepage">
 						<p>Homepage: <a href="http://store.steampowered.com/"
 target="_blank">http://store.steampowered.com</a></p>
-						<p>Geïnstalleerd grootte: 200 MB</p>
+						<p>Geïnstalleerde grootte: 200 MB</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Minetest</td></tr>
@@ -49,16 +49,16 @@ InfiniMiner, Minecraft en dergelijke spellen.</p>
 					<td class="app_homepage">
 						<p>Homepage: <a href="http://minetest.net"
 target="_blank">http://minetest.net</a></p>
-						<p>Geïnstalleerd grootte: 10 MB</p>
+						<p>Geïnstalleerde grootte: 10 MB</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">0 A.D.</td></tr>
 				<tr>
 					<td>
-						<p>0 A.D. is een gratis, open-source, historische Real Time Strategy (RTS) spel
-momenteel in ontwikkeling door Wildfire Games, een wereldwijde groep van
-vrijwillige game-ontwikkelaars. Als de leider van een oude beschaving, moet
-u de middelen die u nodig hebt verzamelen om uw vijanden te verslaan.</p>
+						<p>0 A.D. is een gratis, open-source, historisch Real Time Strategy (RTS) spel,
+ontwikkeld door Wildfire Games, een wereldwijde groep van vrijwillige
+game-ontwikkelaars. Als de leider van een oude beschaving, moet u de
+middelen die u nodig hebt verzamelen om uw vijanden te verslaan.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="0ad" src="../link/screenshots/0ad.jpg" /></td>
 				</tr>
@@ -66,19 +66,19 @@ u de middelen die u nodig hebt verzamelen om uw vijanden te verslaan.</p>
 					<td class="app_homepage">
 						<p>Homepage: <a href="http://play0ad.com"
 target="_blank">http://play0ad.com</a></p>
-						<p>Geïnstalleerd grootte: 1 GB</p>
+						<p>Geïnstalleerde grootte: 1 GB</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">De Battle for Wesnoth</td></tr>
 				<tr>
 					<td>
-						<p>De Battle for Wesnoth is een turn-based tactische strategie spel met een
-fantasy thema.</p>
-						<p>Maak een groot leger en leidt uw rekruten op tot geharde veteranen. In
-latere spellen roept u uw hardste krijgers terug waar niemand weerstand
-tegen kan bieden! Kies eenheden uit een grote verzameling van specialisten,
-en maak eenheden met de juiste talenten om op verschillende terreinen en
-welke tegenstand dan ook onverslaanbaar te zijn.</p>
+						<p>De Battle for Wesnoth is een tactisch strategie spel met een fantasy thema
+waarbij de spelers om beurten spelen.</p>
+						<p>Maak een groot leger en leid uw rekruten op tot geharde veteranen. In latere
+spellen roept u uw hardste krijgers terug en formeer een dodelijk leger waar
+niemand weerstand tegen kan bieden! Kies eenheden uit een grote verzameling
+van specialisten en maak eenheden met de juiste talenten om op verschillende
+terreinen en welke tegenstand dan ook onverslaanbaar te zijn.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="wesnoth" src="../link/screenshots/wesnoth.jpg" /></td>
 				</tr>
@@ -86,7 +86,7 @@ welke tegenstand dan ook onverslaanbaar te zijn.</p>
 					<td class="app_homepage">
 						<p>Homepage: <a href="http://www.wesnoth.org/"
 target="_blank">http://www.wesnoth.org</a></p>
-						<p>Geïnstalleerd grootte: 450 MB</p>
+						<p>Geïnstalleerde grootte: 450 MB</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Sauerbraten</td></tr>
@@ -104,14 +104,14 @@ bewerken.</p>
 					<td class="app_homepage">
 						<p>Homepage: <a href="http://sauerbraten.org/"
 target="_blank">http://sauerbraten.org</a></p>
-						<p>Geïnstalleerd grootte: 650 MB</p>
+						<p>Geïnstalleerde grootte: 650 MB</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Neverball</td></tr>
 				<tr>
 					<td>
 						<p>Kantel de vloer om een bal door een hindernisbaan te rollen voordat de tijd
-om is. Neverball is zowel een puzzel spel, actiespel, maar vooral een test
+om is. Neverball is deels puzzelspel, deels actiespel, maar vooral een test
 van bekwaamheid.</p>
 					</td>
 					<td rowspan="2"><img class="screenshot" alt="neverball" src="../link/screenshots/neverball.jpg" /></td>
@@ -120,7 +120,7 @@ van bekwaamheid.</p>
 					<td class="app_homepage">
 						<p>Homepage: <a href="http://neverball.org"
 target="_blank">http://neverball.org</a></p>
-						<p>Geïnstalleerd grootte: 150 MB</p>
+						<p>Geïnstalleerde grootte: 150 MB</p>
 					</td>
 				</tr>
 				<tr><td colspan="2" class="app_title">Super Tux Kart</td></tr>
@@ -135,7 +135,7 @@ items om uit te proberen. Veel plezier!</p>
 					<td class="app_homepage">
 						<p>Homepage: <a href="http://supertuxkart.sourceforge.net/"
 target="_blank">http://supertuxkart.sourceforge.net</a></p>
-						<p>Geïnstalleerd grootte: 350 MB</p>
+						<p>Geïnstalleerde grootte: 350 MB</p>
 					</td>
 				</tr>
 				<tr><td colspan="2">&nbsp;</td></tr>
