--- a/po/en/multimedia.html
+++ b/po/en/multimedia.html
@@ -26,7 +26,7 @@
 					<td class="app_homepage">
 						<div class="warning">
 							<p>Warning:</p>
-							<p>Some Flash content may harm your system.</p>
+							<p>Be aware that Flash is not Open Source. Some Flash content may harm your system.</p>
 						</div>
 					</td>
 				</tr>
@@ -34,7 +34,7 @@
 				<tr>
 					<td>
 						<p>Most commercial DVDs are encrypted with CSS (the Content Scramble System), which attempts to restrict the software that can play a DVD.</p>
-						<p>SolydXK does not come with the necessary packages pre-installed to play these encrypted DVDs</p>
+						<p>SolydXK does not come with the necessary packages pre-installed to play these encrypted DVDs.</p>
 						<p>By clicking the install button below the following packages will be installed on your system:</p>
 						<ul>
 							<li>libdvdcss2</li>
