--- a/po/en/wine.html
+++ b/po/en/wine.html
@@ -23,7 +23,7 @@
 						<p>SolydXK comes with a wide variety of software. However, if you cannot find the right software in our repository and you need to use MS Windows software, you can install it using PlayOnLinux. Not all software can run this way, but a large number of software is already supported.</p>
 						<p>You can see a tutorial on <a href="http://solydxk.com/get-support/tutorials/#msoffice" target="_blank">installing MS Office 2010 with PlayOnLinux</a> on our web site.</p>
 						<div class="warning">
-							<p>By using this software you may make your system vulnerable to MS Windows viruses and malware.</p>
+							<p>By using this software you may make your system vulnerable to MS Windows viruses and malware. The risk of infection is not higher than under native MS Windows.</p>
 							<p>Make sure you install software from trusted parties only.</p>
 							<p>Read about the <a href="http://wiki.winehq.org/FAQ#head-1c91cac836dd52754c846d2ef62be4f346eebe87">risk on using Wine</a></p>
 						</div>
