Improved visibility of the donation button

--- a/po/en/welcome.html
+++ b/po/en/welcome.html
@@ -10,11 +10,12 @@
 
 	<div class="main">
 		<div class="content">
+			<p class="app_title">Thank you for using SolydXK</p>
 			<p>SolydXK is an open source desktop operating system for businesses, organizations and home users. Both SolydX and SolydK are based on Debian stable to ensure the greatest stability and security.</p>
 			<p>
 				<table>
 					<tr>
-						<td><p>SolydXK is absolutely free to use. However, your donation is very much appreciated, and ensures that we can continue improving SolydXK.</p></td>
+						<td><p class="alert">Please, consider a donation. Your donation is very much appreciated, and ensures that we can continue improving SolydXK.</p></td>
 						<td><a href="http://solydxk.com/contribute/donate/" target="_blank"><img alt="donate" src="../link/donate.gif" /></a></td>
 					</tr>
 				</table>
