--- a/po/translated/nl/welcome.html
+++ b/po/translated/nl/welcome.html
@@ -10,14 +10,15 @@
 
 	<div class="main">
 		<div class="content">
+			<p class="app_title">Thank you for using SolydXK</p>
 			<p>SolydXK is een open source besturingssysteem voor bedrijven, organisaties en
 thuisgebruikers. Zowel SolydX als SolydK zijn gebaseerd op Debian Stable om
 de grootste stabiliteit en veiligheid te waarborgen.</p>
 			<p>
 				<table>
 					<tr>
-						<td><p>SolydXK is geheel gratis te gebruiken. Uw donatie wordt echter zeer
-gewaardeerd en zorgt ervoor dat we SolydXK kunnen blijven verbeteren.</p></td>
+						<td><p class="alert">Please, consider a donation. Your donation is very much appreciated, and
+ensures that we can continue improving SolydXK.</p></td>
 						<td><a href="http://solydxk.com/contribute/donate/" target="_blank"><img alt="donate" src="../link/donate.gif" /></a></td>
 					</tr>
 				</table>
