--- a/po/translated/ca/welcome.html
+++ b/po/translated/ca/welcome.html
@@ -10,14 +10,15 @@
 
 	<div class="main">
 		<div class="content">
+			<p class="app_title">Thank you for using SolydXK</p>
 			<p>SolydXK és un Sistema Operatiu de codi obert per a empreses, organitzacions
 i ús domèstic. Tant SolydX com SolydK estan basats en Debian Estable per
 assegurar la màxima estabilitat i seguretat.</p>
 			<p>
 				<table>
 					<tr>
-						<td><p>SolydXK és pot usar absolutament de franc. Tanmateix, un donatiu vostre serà
-molt apreciat, i assegurarà que puguem continuar millorant SolydXK.</p></td>
+						<td><p class="alert">Please, consider a donation. Your donation is very much appreciated, and
+ensures that we can continue improving SolydXK.</p></td>
 						<td><a href="http://solydxk.com/contribute/donate/" target="_blank"><img alt="donate" src="../link/donate.gif" /></a></td>
 					</tr>
 				</table>
