--- a/po/translated/de/welcome.html
+++ b/po/translated/de/welcome.html
@@ -10,15 +10,15 @@
 
 	<div class="main">
 		<div class="content">
+			<p class="app_title">Thank you for using SolydXK</p>
 			<p>SolydXK ist ein Open Source Desktop-Betriebssystem für Unternehmen,
 Organisationen und private Anwender. Sowohl SolydX und SolydK basieren auf
 Debian stable, um die größte Stabilität und Sicherheit zu gewährleisten.</p>
 			<p>
 				<table>
 					<tr>
-						<td><p>SolydXK ist absolut kostenlos zu benutzen. Allerdings ist Ihre Spende sehr
-geschätzt, und stellt sicher, dass wir auch weiterhin die Verbesserung von
-SolydXK vorantreiben können.</p></td>
+						<td><p class="alert">Please, consider a donation. Your donation is very much appreciated, and
+ensures that we can continue improving SolydXK.</p></td>
 						<td><a href="http://solydxk.com/contribute/donate/" target="_blank"><img alt="donate" src="../link/donate.gif" /></a></td>
 					</tr>
 				</table>
