Skip some pages for armhf architecture

--- a/po/translated/de/welcome.html
+++ b/po/translated/de/welcome.html
@@ -10,15 +10,16 @@
 
 	<div class="main">
 		<div class="content">
-			<p class="app_title">Thank you for using SolydXK</p>
+			<p class="app_title">Danke, dass Sie SolydXK benutzen.</p>
 			<p>SolydXK ist ein Open Source Desktop-Betriebssystem für Unternehmen,
 Organisationen und private Anwender. Sowohl SolydX und SolydK basieren auf
 Debian stable, um die größte Stabilität und Sicherheit zu gewährleisten.</p>
 			<p>
 				<table>
 					<tr>
-						<td><p class="alert">Please, consider a donation. Your donation is very much appreciated, and
-ensures that we can continue improving SolydXK.</p></td>
+						<td><p class="alert">Bitte ziehen Sie eine Spende in Betracht. Ihre Spende ist uns in höchstem
+Maße willkommen und stellt sicher, dass wir weiter daran arbeiten können,
+SolydXK zu verbessern.</p></td>
 						<td><a href="http://solydxk.com/contribute/donate/" target="_blank"><img alt="donate" src="../link/donate.gif" /></a></td>
 					</tr>
 				</table>
